--- a/pom.xml
+++ b/pom.xml
@@ -22,8 +22,6 @@
     <maven.compiler.target>17</maven.compiler.target>
     <java.version>17</java.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <keycloak.version>18.0.0</keycloak.version>
-    <spring-cloud.version>2021.0.1</spring-cloud.version>
     <skip.junit-test>true</skip.junit-test>
   </properties>
 
@@ -36,6 +34,7 @@
     <dependency>
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-starter-openfeign</artifactId>
+      <version>3.1.3</version>
     </dependency>
     <dependency>
       <groupId>org.springdoc</groupId>
@@ -79,11 +78,6 @@
       <groupId>org.postgresql</groupId>
       <artifactId>postgresql</artifactId>
       <version>42.4.0</version>
-    </dependency>
-    <dependency>
-      <groupId>org.mapstruct</groupId>
-      <artifactId>mapstruct</artifactId>
-      <version>${mapstruct.version}</version>
     </dependency>
 
     <!--Lombok-->
