Added project structure Added db connection params Added rest controller

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 # swagger-ui custom path
 springdoc.swagger-ui.path=/swagger-ui.html
+#DB
 spring.datasource.url=jdbc:postgresql://localhost:5432/local_db
 spring.datasource.username=postgres
 spring.datasource.password=postgres
-
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
